# laia_cli

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: publish.yml
laia/: cli.py  requirements.txt
laia/commands/: generate_schema.py  init_project.py  run_laia_flutter.py  start_project.py
laia/generators/: generate_ts_interface.py
laia/generators/backoffice/: backoffice_generator.py
laia/generators/backoffice/angular/: angular_generator.py  app_component_html.py  app_component_module.py  app_component_scss.py  auth_component_html.py  auth_component_scss.py  intercept_service.py  models_component_html.py  route_to_app_routing.py
laia/generators/backoffice/angular/login/: login_component_ts.py
laia/generators/backoffice/angular/models/: model_component_files.py  models_component_ts.py
laia/generators/backoffice/angular/services/: intercept_service.py
laia/templates/: .env  User.yaml  docker-compose.yaml  main.py  requirements.txt
laia_cli/: cli.py  requirements.txt
laia_cli/commands/: init_project.py  start_project.py
laia_cli/templates/: .env  User.yaml  docker-compose.yaml  main.py  requirements.txt  welcome.html
