[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laia_cli"
version = "0.1.0"
description = "CLI de la librería de LAIA"
readme = "README.md"
authors = [
    { name = "Itziar", email = "itziar.mensa08@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "requests>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/tuusuario/mi-libreria"
"Bug Tracker" = "https://github.com/tuusuario/mi-libreria/issues"
